fix header position when visible

--- a/src/app/menus/page.module.css
+++ b/src/app/menus/page.module.css
@@ -123,7 +123,6 @@
     height: 46px;
     width: 45px;
     cursor: pointer;
-    z-index: 1001;
   }
 
   .categoriesWrapper {
