--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -7,6 +7,11 @@
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5);
 }
 
+.containerSticky {
+  position: fixed;
+  width: 100%;
+}
+
 .humburger {
   padding: 12px 15px;
 }
@@ -26,7 +31,7 @@
   visibility: hidden;
   z-index: 1000;
   background: #2d2d2d;
-  transition: 0.35s;
+  transition: 0.35s, margin-top 0s;
   position: absolute;
   width: 100%;
 }
@@ -35,6 +40,8 @@
   height: calc(100vh - 50px);
   opacity: 1;
   visibility: visible;
+  position: fixed;
+  margin-top: 50px;
 }
 
 .nav {
